--- a/index.html
+++ b/index.html
@@ -1494,6 +1494,7 @@
                                                 <div class="elementor-widget-container">
                                                     <div class="elementor-image-box-wrapper">
                                                         <div class="elementor-image-box-content">
+                                                            <img src="files/22.jpg" style="width: 100%;height: 100%;object-fit: cover;">
                                                             <p class="elementor-image-box-description">
                                                                 美雄台杉所投資的領域以政府五+二重點產業為主。除了資金投入，管理團隊專業經理人亦提供產業經驗、人脈連結、國際串連等資源，協助台灣的公司與國際市場接軌，建立台灣產業正循環。</p>
                                                         </div>
