--- a/index.html
+++ b/index.html
@@ -1378,10 +1378,10 @@
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-407"><a
                                     href="#five"
                                     class="nav-top-link">合作銀行</a></li>
-                            <li id="menu-item-408"
+                            <!--<li id="menu-item-408"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-407"><a
                                     href="#six"
-                                    class="nav-top-link">聯絡我們</a></li>
+                                    class="nav-top-link">聯絡我們</a></li>-->
                         </ul>
                     </div>
 
@@ -2598,9 +2598,9 @@
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-407"><a
                             href="#five">合作銀行</a>
                     </li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-408"><a
+                    <!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-408"><a
                             href="#six">聯絡我們</a>
-                    </li>
+                    </li>-->
                     <!--<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-277 has-child"
                         aria-expanded="false"><a target="_blank" rel="noopener noreferrer"
                                                  class="menu-image-title-hide menu-image-not-hovered"><span
