--- a/index.html
+++ b/index.html
@@ -2462,36 +2462,36 @@
                                              data-widget_type="social-icons.default">
                                             <div class="elementor-widget-container">
                                                 <div class="elementor-social-icons-wrapper elementor-grid">
-<span class="elementor-grid-item">
+<!--<span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-envelope elementor-repeater-item-b7370ea"
    href="https://www.taiwaniacapital.com/%e8%81%af%e7%b5%a1%e6%88%91%e5%80%91/" target="_blank">
 <span class="elementor-screen-only">Envelope</span>
 <i class="fas fa-envelope"></i> </a>
-</span>
+</span>-->
                                                     <span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-repeater-item-694d791"
-   href="https://www.facebook.com/taiwaniacapital/" target="_blank">
+   href="http://64.176.84.242/facebook.com/profile.php?id=100087459024299&ref_component=mbasic_bookmark&ref_page=XMenuController&paipv=0&eav=AfZfoyDC4pbReUnOmxV8GOhT9486tKQpkdmY4amujcriYsJK9BRkH7Dua8uPnEOwgms" target="_blank">
 <span class="elementor-screen-only">Facebook-f</span>
 <i class="fab fa-facebook-f"></i> </a>
 </span>
-                                                    <span class="elementor-grid-item">
+                                                    <!--<span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-linkedin-in elementor-repeater-item-00ba045"
    href="https://www.linkedin.com/company/taiwania-capital/" target="_blank">
 <span class="elementor-screen-only">Linkedin-in</span>
 <i class="fab fa-linkedin-in"></i> </a>
-</span>
-                                                    <span class="elementor-grid-item">
+</span>-->
+                                                    <!--<span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-3120cd1"
    href="https://www.youtube.com/channel/UCPtvsun0HtPedEzX8joLJ0w/" target="_blank">
 <span class="elementor-screen-only">Youtube</span>
 <i class="fab fa-youtube"></i> </a>
-</span>
-                                                    <span class="elementor-grid-item">
+</span>-->
+                                                    <!--<span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-podcast elementor-repeater-item-555fce2"
    href="https://lihi2.cc/7SRrU" target="_blank">
 <span class="elementor-screen-only">Podcast</span>
 <i class="fas fa-podcast"></i> </a>
-</span>
+</span>-->
                                                 </div>
                                             </div>
                                         </div>
@@ -2513,7 +2513,7 @@
                                                                      data-id="bfc0db1" data-element_type="widget"
                                                                      data-widget_type="button.default">
                                                                     <div class="elementor-widget-container">
-                                                                        <div class="elementor-button-wrapper">
+                                                                        <!--<div class="elementor-button-wrapper">
                                                                             <a href="https://www.taiwaniacapital.com/newsleopard/"
                                                                                class="elementor-button-link elementor-button elementor-size-sm"
                                                                                role="button">
@@ -2521,7 +2521,7 @@
 <span class="elementor-button-text">訂閱電子報</span>
 </span>
                                                                             </a>
-                                                                        </div>
+                                                                        </div>-->
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -2534,10 +2534,10 @@
                                                                 <div class="elementor-element elementor-element-a5e0ca3 elementor-widget elementor-widget-heading"
                                                                      data-id="a5e0ca3" data-element_type="widget"
                                                                      data-widget_type="heading.default">
-                                                                    <div class="elementor-widget-container">
+                                                                    <!--<div class="elementor-widget-container">
                                                                         <h2 class="elementor-heading-title elementor-size-default">
                                                                             Copyright © Taiwania Capital. All rights
-                                                                            reserved.</h2></div>
+                                                                            reserved.</h2></div>-->
                                                                 </div>
                                                             </div>
                                                         </div>
