--- a/index.html
+++ b/index.html
@@ -2410,7 +2410,7 @@
                                                     <li class="elementor-icon-list-item">
 <span class="elementor-icon-list-icon">
 <i aria-hidden="true" class="fas fa-map-marker-alt"></i> </span>
-                                                        <span class="elementor-icon-list-text">110208台北市信義區基隆路一段333號18樓1806室</span>
+                                                        <span class="elementor-icon-list-text">臺北市大安區信義路4段207號13樓</span>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -2445,7 +2445,7 @@
                                                     <li class="elementor-icon-list-item">
 <span class="elementor-icon-list-icon">
 <i aria-hidden="true" class="fas fa-map-marker-alt"></i> </span>
-                                                        <span class="elementor-icon-list-text">Taiwania Capital Management USA, Inc 3945 Freedom Circle, Suite 760, Santa Clara, CA 95054</span>
+                                                        <span class="elementor-icon-list-text">13F, No. 207, Section 4, Xinyi Road, Daan District, Taipei City</span>
                                                     </li>
                                                 </ul>
                                             </div>
