--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,7 @@
                                                         <div class="elementor-image-box-content">
                                                             <img src="files/22.jpg" style="width: 100%;height: 100%;object-fit: cover;">
                                                             <p class="elementor-image-box-description">
-                                                                美雄美雄所投資的領域以政府五+二重點產業為主。除了資金投入，管理團隊專業經理人亦提供產業經驗、人脈連結、國際串連等資源，協助台灣的公司與國際市場接軌，建立台灣產業正循環。</p>
+                                                                美雄所投資的領域以政府五+二重點產業為主。除了資金投入，管理團隊專業經理人亦提供產業經驗、人脈連結、國際串連等資源，協助台灣的公司與國際市場接軌，建立台灣產業正循環。</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2470,7 +2470,7 @@
 </span>-->
                                                     <span class="elementor-grid-item">
 <a class="elementor-icon elementor-social-icon elementor-social-icon-facebook-f elementor-repeater-item-694d791"
-   href="https://facebook.com/profile.php?id=100087459024299&ref_component=mbasic_bookmark&ref_page=XMenuController&paipv=0&eav=AfZfoyDC4pbReUnOmxV8GOhT9486tKQpkdmY4amujcriYsJK9BRkH7Dua8uPnEOwgms" target="_blank">
+   href="https://www.facebook.com/profile.php?id=100087459024299&ref_component=mbasic_bookmark&ref_page=XMenuController&paipv=0&eav=AfZfoyDC4pbReUnOmxV8GOhT9486tKQpkdmY4amujcriYsJK9BRkH7Dua8uPnEOwgms" target="_blank">
 <span class="elementor-screen-only">Facebook-f</span>
 <i class="fab fa-facebook-f"></i> </a>
 </span>
