--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@
                         <ul class="header-nav header-nav-main nav nav-right  nav-size-large nav-spacing-xlarge nav-uppercase">
                             <li id="menu-item-230"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-230">
-                                <a href="#first" class="nav-top-link">關於我們
+                                <a href="#first" class="nav-top-link">使命與願景
                                 </a>
                             </li>
                             <li id="menu-item-1039"
@@ -1452,7 +1452,7 @@
                                                  data-widget_type="heading.default">
                                                 <div class="elementor-widget-container">
                                                     <h2 class="my-elementor-heading-title elementor-size-default">
-                                                        關於我們</h2></div>
+                                                        使命與願景</h2></div>
                                             </div>
                                         </div>
                                     </div>
@@ -1495,8 +1495,15 @@
                                                     <div class="elementor-image-box-wrapper">
                                                         <div class="elementor-image-box-content">
                                                             <img src="files/22.jpg" style="width: 100%;height: 100%;object-fit: cover;">
+                                                            <h5>我們的使命</h5>
                                                             <p class="elementor-image-box-description">
-                                                                美雄所投資的領域以政府五+二重點產業為主。除了資金投入，管理團隊專業經理人亦提供產業經驗、人脈連結、國際串連等資源，協助台灣的公司與國際市場接軌，建立台灣產業正循環。</p>
+
+                                                                我們致力於「守護與創造」我們的員工、客戶、股東與社區的價值，協助他們財務成功並建立美好未來。</p>
+
+                                                            <h5>我們的願景</h5>
+                                                            <p class="elementor-image-box-description">
+
+                                                                臺灣第一、亞洲領先。</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2702,7 +2709,7 @@
 </li>-->
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-230 has-child"
                         aria-expanded="false">
-                        <a href="#first">關於我們</a>
+                        <a href="#first">使命與願景</a>
                     </li>
                     <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-1039 has-child"
                         aria-expanded="false"><a
