--- a/index.html
+++ b/index.html
@@ -2577,6 +2577,19 @@
                                                 </ul>
                                             </div>
                                         </div>
+                                        <div class="elementor-element elementor-element-28e840b elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list"
+                                             data-id="28e840b" data-element_type="widget"
+                                             data-widget_type="icon-list.default">
+                                            <div class="elementor-widget-container">
+                                                <ul class="elementor-icon-list-items">
+                                                    <li class="elementor-icon-list-item">
+<span class="elementor-icon-list-icon">
+<i aria-hidden="true" class="fas fa-map-marker-alt"></i> </span>
+                                                        <span class="elementor-icon-list-text">代表人：劉芳妏</span>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
